Changes as of 2.13.2018

--- a/main.html
+++ b/main.html
@@ -64,7 +64,7 @@
 		  <div class="col-4">
 		  	<h3 class="display">ComicCrusade</h3>
 		  	<p class="lead">Android app dedicated to finding the comics you’re looking for in nearby stores.</p>
-		  	<a class="btn btn-primary btn-lg" href="#" role="button">See Case Study</a>
+		  	<a class="btn btn-primary btn-lg" href="comiccrusade.html" role="button">See Case Study</a>
 
 		  </div>
 		</div>
@@ -78,7 +78,7 @@
 		  <div class="col-4">
 		  	<h3 class="display">FoodSwitch</h3>
 		  	<p class="lead">A web-based app for people who want to live a healthier lifestyle.</p>
-		  	<a class="btn btn-primary btn-lg" href="#" role="button">See Case Study</a>
+		  	<a class="btn btn-primary btn-lg" href="foodswitch.html" role="button">See Case Study</a>
 
 		  </div>
 
