--- a/main.html
+++ b/main.html
@@ -28,7 +28,7 @@
 <body>
 
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-	  <a class="navbar-brand" href="main.html"><img src="images/home-logo.png"/></a>
+	  <a class="navbar-brand" href="main.html"><img src="images/home-logo.png" class="img-fluid"/></a>
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 	    <span class="navbar-toggler-icon"></span>
 	  </button>
@@ -45,11 +45,11 @@
 	  </div>
 	</nav>
 
-	<div class="jumbotron">
-	  <h1 class="display-4">Aidan D. Herlong</h1>
+	<div class="jumbotron text-center">
+	  <h1 class="display-6 my-4">Aidan D. Herlong</h1>
 	  <p class="lead">UX Designer from Houston, TX</p>
 	  <p class="lead">
-	    <a class="btn btn-primary btn-lg" href="#" role="button">About Me</a>
+	    <a class="btn btn-outline-dark btn-lg" href="#" role="button">ABOUT ME</a>
 	  </p>
 	</div>
 
@@ -58,13 +58,13 @@
 		<div class="row">
 		  <div class="col-8">
 		  	
-		  	<a class="comic-crusade-img" href=""><img src="images/comic-crusade-img.png"/></a>
+		  	<a class="comic-crusade-img"><img src="images/comic-crusade-img.png" class="img-fluid rounded float-left"/></a>
 
 		  </div>
 		  <div class="col-4">
 		  	<h3 class="display">ComicCrusade</h3>
 		  	<p class="lead">Android app dedicated to finding the comics you’re looking for in nearby stores.</p>
-		  	<a class="btn btn-primary btn-lg" href="comiccrusade.html" role="button">See Case Study</a>
+		  	<a class="btn btn-outline-dark btn-lg" href="comiccrusade.html" role="button">SEE CASE STUDY</a>
 
 		  </div>
 		</div>
@@ -78,13 +78,13 @@
 		  <div class="col-4">
 		  	<h3 class="display">FoodSwitch</h3>
 		  	<p class="lead">A web-based app for people who want to live a healthier lifestyle.</p>
-		  	<a class="btn btn-primary btn-lg" href="foodswitch.html" role="button">See Case Study</a>
+		  	<a class="btn btn-outline-dark btn-lg" href="foodswitch.html" role="button">SEE CASE STUDY</a>
 
 		  </div>
 
 		  <div class="col-8">
 		  	
-		  	<a class="comic-crusade-img" href=""><img src="images/foodswitch-img.png"/></a>
+		  	<a class="comic-crusade-img"><img src="images/foodswitch-img.png" class="img-fluid" /></a>
 
 		  </div>
 
@@ -106,7 +106,7 @@
         <div class="row d-flex text-center justify-content-center mb-md-0 mb-4">
 
             <!--Grid column-->
-            <div class="col-md-8 col-12 mt-5">
+            <div class="col-md-8 col-12 mt-5 text-white">
                 <h2 style="line-height: 1.7rem">Connect</p>
 
             </div>
@@ -121,9 +121,11 @@
         <div class="row pb-3">
 
             <!--Grid column-->
-            <div class="col-md-12">
 
-                <div class="footer-socials mb-5">
+            <div class="col-md-4"></div>
+            <div class="col-md-4">
+
+                <div class="footer-socials mb-5 my-4">
                     <!--Facebook-->
                     <a class="email" href="#"><img src="images/email-icon.png"/></a>
                     <!--Twitter-->
@@ -132,6 +134,7 @@
                     <a class="github" href="#"><img src="images/github-icon.png"/></a>
                 </div>
             </div>
+            <div class="col-md-4"></div>
             <!--Grid column-->
         </div>
         <!--Grid row-->
@@ -139,7 +142,7 @@
     </div>
 
     <!--Copyright-->
-    <div class="footer-copyright text-center">
+    <div class="footer-copyright text-center text-white">
         <div class="container-fluid">
            <p class="copyright">© 2016 Aidan D. Herlong</p>
         </div>
