--- a/main.html
+++ b/main.html
@@ -12,29 +12,32 @@
 
 	<title>Aidan's UX Design Portfolio</title>
 
+	<!-- Bootstrap -->
+
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
 	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Raleway:500|Vollkorn:400i" rel="stylesheet">
 
 	<!-- CSS -->
 	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="css/animate.css">
 	
-	<!-- Bootstrap -->
-
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">	
 </head>
 
 <body>
 
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-	  <a class="navbar-brand" href="main.html"><img src="images/home-logo.png" class="img-fluid"/></a>
-	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-	    <span class="navbar-toggler-icon"></span>
-	  </button>
+		  <a class="navbar-brand" href="main.html"><img src="images/home-logo.png" class="img-fluid ml-3"/></a>
+		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+		    <span class="navbar-toggler-icon"></span>
+		  </button>
+	
 
 	  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-	    <ul class="navbar-nav mr-auto">
+	    <ul class="nav navbar-nav navbar-right ml-auto mr-3">
 	      <li class="nav-item">
 	        <a class="nav-link" href="#">Case Studies</a>
 	      </li>
@@ -46,10 +49,10 @@
 	</nav>
 
 	<div class="jumbotron text-center">
-	  <h1 class="display-6 my-4">Aidan D. Herlong</h1>
-	  <p class="lead">UX Designer from Houston, TX</p>
+	  <h1 class="display-6" style="margin-top: 150px;">Aidan D. Herlong</h1>
+	  <p class="lead mt-2" style="margin-top: -16px;">UX Designer from Houston, TX</p>
 	  <p class="lead">
-	    <a class="btn btn-outline-dark btn-lg" href="#" role="button">ABOUT ME</a>
+	    <a class="btn btn-outline-dark btn-lg mt-4" href="#" role="button">ABOUT ME</a>
 	  </p>
 	</div>
 
@@ -58,11 +61,11 @@
 		<div class="row">
 		  <div class="col-8">
 		  	
-		  	<a class="comic-crusade-img"><img src="images/comic-crusade-img.png" class="img-fluid rounded float-left"/></a>
+		  	<a class="comic-crusade-img"><img src="images/comic-crusade-img.png" class="img-fluid float-left" style="margin-top: 120px;" /></a>
 
 		  </div>
 		  <div class="col-4">
-		  	<h3 class="display">ComicCrusade</h3>
+		  	<h3 class="display" style="margin-top: 290px;">ComicCrusade</h3>
 		  	<p class="lead">Android app dedicated to finding the comics you’re looking for in nearby stores.</p>
 		  	<a class="btn btn-outline-dark btn-lg" href="comiccrusade.html" role="button">SEE CASE STUDY</a>
 
@@ -76,15 +79,17 @@
 		<div class="row">
 		 
 		  <div class="col-4">
-		  	<h3 class="display">FoodSwitch</h3>
+		  	<h3 class="display" style="margin-top: 290px;">FoodSwitch</h3>
 		  	<p class="lead">A web-based app for people who want to live a healthier lifestyle.</p>
 		  	<a class="btn btn-outline-dark btn-lg" href="foodswitch.html" role="button">SEE CASE STUDY</a>
 
 		  </div>
 
-		  <div class="col-8">
+		  <div class="col-2"></div>
+
+		  <div class="col-6">
 		  	
-		  	<a class="comic-crusade-img"><img src="images/foodswitch-img.png" class="img-fluid" /></a>
+		  	<a class="foodswitch-img"><img src="images/foodswitch-img.png" class="img-fluid float-right" style="margin-top: 100px; margin-bottom: 100px;" /></a>
 
 		  </div>
 
@@ -118,23 +123,23 @@
         <hr class="clearfix d-md-none rgba-white-light" style="margin: 10% 15% 5%;">
 
         <!--Grid row-->
-        <div class="row pb-3">
+        <div class="row">
 
             <!--Grid column-->
 
-            <div class="col-md-4"></div>
+            <div class="col-md-5"></div>
             <div class="col-md-4">
 
-                <div class="footer-socials mb-5 my-4">
+                <div class="footer-socials mb-5 my-3">
                     <!--Facebook-->
-                    <a class="email" href="#"><img src="images/email-icon.png"/></a>
+                    <a class="email" href="#"><img src="images/email-icon.png" class="mr-4" /></a>
                     <!--Twitter-->
-                    <a class="linked-in" href="#"><img src="images/linkedin-icon.png"/></a>
+                    <a class="linked-in" href="#"><img src="images/linkedin-icon.png" class="mr-4" /></a>
                     <!--Google +-->
-                    <a class="github" href="#"><img src="images/github-icon.png"/></a>
+                    <a class="github" href="#"><img src="images/github-icon.png" class="mr-4" /></a>
                 </div>
             </div>
-            <div class="col-md-4"></div>
+            <div class="col-md-3"></div>
             <!--Grid column-->
         </div>
         <!--Grid row-->
@@ -142,7 +147,7 @@
     </div>
 
     <!--Copyright-->
-    <div class="footer-copyright text-center text-white">
+    <div class="footer-copyright text-center text-white pb-1">
         <div class="container-fluid">
            <p class="copyright">© 2016 Aidan D. Herlong</p>
         </div>
