Email issue resolved

--- a/main.html
+++ b/main.html
@@ -37,7 +37,7 @@
 	
 
 	  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-	    <ul class="nav navbar-nav navbar-right ml-auto mr-3 smooth-scroll">
+	    <ul class="nav navbar-nav navbar-right ml-auto mr-3">
 	      <li class="nav-item">
 	        <a class="nav-link js-scroll-trigger-active" href="#case-studies">Case Studies</a>
 	      </li>
@@ -136,7 +136,7 @@
 
                 <div class="footer-socials mb-5 my-2">
                     <!--Email-->
-                    <a class="email" href="https://Aidan_Herlong@alumni.baylor.edu"><img src="images/email-icon.png" class="mr-4"/></a>
+                    <a class="email" href="mailto:Aidan_Herlong@alumni.baylor.edu"><img src="images/email-icon.png" class="mr-4"/></a>
                     <!--LI-->
                     <a class="linked-in" href="https://www.linkedin.com/in/aidanherlong/"><img src="images/linkedin-icon.png" class="mr-4" /></a>
                     <!--GH-->
