--- a/aboutme.html
+++ b/aboutme.html
@@ -32,23 +32,24 @@
 
 	<!-- Nav Bar-->
 
-	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+	<nav class="navbar navbar-expand-md navbar-dark bg-dark">
 		  <a class="navbar-brand" href="main.html"><img src="images/home-logo-final-img.png" class="portfolio-logo img-fluid ml-3"/></a>
-		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+
+		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collpase_target">
 		    <span class="navbar-toggler-icon"></span>
 		  </button>
 	
 
-	  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-	    <ul class="nav navbar-nav navbar-right ml-auto mr-3">
-	      <li class="nav-item">
-	        <a class="nav-link" href="#">Case Studies</a>
-	      </li>
-	      <li class="nav-item">
-	        <a class="nav-link" href="#">Contact</a>
-	      </li>
-	    </ul>
-	  </div>
+		  <div class="collapse navbar-collapse" id="collpase_target">
+		    <ul class="nav navbar-nav navbar-right ml-auto mr-3">
+		      <li class="nav-item">
+		        <a class="nav-link" href="main.html#case-studies">Case Studies</a>
+		      </li>
+		      <li class="nav-item">
+		        <a class="nav-link" href="#contact-footer-4">Contact</a>
+		      </li>
+		    </ul>
+		  </div>
 	</nav>
 
 	<!-- Hero -->
@@ -147,6 +148,7 @@
 					<li>Branding</li>
 					<li>Wireframing</li>
 					<li>Prototyping</li>
+					<li>Sketch Noting</li>
 
 				</ul>
 
@@ -178,7 +180,7 @@
     <!--Footer Links-->
     <div class="container">
 
-    	<a name="contact-footer"></a>
+    	<a name="contact-footer-4"></a>
 
         <!--Grid row-->
 
@@ -209,11 +211,11 @@
 
                 <div class="footer-socials mb-5 my-2">
                     <!--Facebook-->
-                    <a class="email" href="#"><img src="images/email-icon.png" class="mr-4" /></a>
+                    <a class="email" href="mailto:Aidan_Herlong@alumni.baylor.edu"><img src="images/email-icon.png" class="mr-4" /></a>
                     <!--Twitter-->
-                    <a class="linked-in" href="#"><img src="images/linkedin-icon.png" class="mr-4" /></a>
+                    <a class="linked-in" href="https://www.linkedin.com/in/aidanherlong/"><img src="images/linkedin-icon.png" class="mr-4" /></a>
                     <!--Google +-->
-                    <a class="github" href="#"><img src="images/github-icon.png" class="mr-4" /></a>
+                    <a class="github" href="https://github.com/AidanH56"><img src="images/github-icon.png" class="mr-4" /></a>
                 </div>
             </div>
             <div class="col-md-3"></div>
@@ -237,6 +239,7 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+	<script src="js/bootstrap.min.js.map"></script>
 
 
 
