Renamed main.html tags for navbars

--- a/comiccrusade.html
+++ b/comiccrusade.html
@@ -33,7 +33,7 @@
 	<!-- Nav Bar-->
 
 	<nav class="navbar navbar-expand-md navbar-dark bg-dark">
-		  <a class="navbar-brand" href="main.html"><img src="images/home-logo-final-img.png" class="portfolio-logo img-fluid ml-3"/></a>
+		  <a class="navbar-brand" href="index.html"><img src="images/home-logo-final-img.png" class="portfolio-logo img-fluid ml-3"/></a>
 
 		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collpase_target">
 		    <span class="navbar-toggler-icon"></span>
@@ -43,7 +43,7 @@
 		  <div class="collapse navbar-collapse" id="collpase_target">
 		    <ul class="nav navbar-nav navbar-right ml-auto mr-3">
 		      <li class="nav-item">
-		        <a class="nav-link" href="main.html#case-studies">Case Studies</a>
+		        <a class="nav-link" href="index.html#case-studies">Case Studies</a>
 		      </li>
 		      <li class="nav-item">
 		        <a class="nav-link" href="#contact-footer-2">Contact</a>
