--- a/aboutme.html
+++ b/aboutme.html
@@ -20,7 +20,6 @@
 	<link href="https://fonts.googleapis.com/css?family=Raleway:500|Vollkorn:400i" rel="stylesheet">
 
 	<!-- CSS -->
-	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/animate.css">
@@ -32,8 +31,8 @@
 
 	<!-- Nav Bar-->
 
-	<nav class="navbar navbar-expand-md navbar-dark bg-dark">
-		  <a class="navbar-brand" href="index.html"><img src="images/home-logo-final-img.png" class="portfolio-logo img-fluid ml-3"/></a>
+	<nav class="navbar navbar-expand-md navbar-dark main-nav fixed-top">
+		  <a class="navbar-brand" href="index.html"><img src="images/logo-img.png" class="portfolio-logo img-fluid"/>Aidan D. Herlong</a>
 
 		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collpase_target">
 		    <span class="navbar-toggler-icon"></span>
@@ -46,7 +45,7 @@
 		        <a class="nav-link" href="index.html#case-studies">Case Studies</a>
 		      </li>
 		      <li class="nav-item">
-		        <a class="nav-link" href="#contact-footer-4">Contact</a>
+		        <a class="nav-link" href="#contact-footer">Contact</a>
 		      </li>
 		    </ul>
 		  </div>
@@ -174,13 +173,12 @@
 
     </div>
 
-    <!--Footer-->
+<!--Footer-->
 <footer class="page-footer bg-dark center-on-small-only pt-0">
 
     <!--Footer Links-->
-    <div class="container">
+    <div class="container" id="contact-footer">
 
-    	<a name="contact-footer-4"></a>
 
         <!--Grid row-->
 
@@ -191,7 +189,7 @@
 
             <!--Grid column-->
             <div class="col-md-8 col-12 mt-5 text-white">
-                <h2 style="line-height: 1.7rem">Connect</p>
+                <h2 style="line-height: 1.7rem">Connect</h2>
 
             </div>
             <!--Grid column-->
@@ -199,26 +197,24 @@
         </div>
         <!--Grid row-->
 
-        <hr class="clearfix d-md-none rgba-white-light" style="margin: 10% 15% 5%;">
-
         <!--Grid row-->
         <div class="row">
 
             <!--Grid column-->
 
-            <div class="col-md-5"></div>
-            <div class="col-md-4">
+            <div class="col-2 col-md-4"></div>
+            <div class="col-8 col-md-4">
 
-                <div class="footer-socials mb-5 my-2">
-                    <!--Facebook-->
-                    <a class="email" href="mailto:Aidan_Herlong@alumni.baylor.edu"><img src="images/email-icon.png" class="mr-4" /></a>
-                    <!--Twitter-->
-                    <a class="linked-in" href="https://www.linkedin.com/in/aidanherlong/"><img src="images/linkedin-icon.png" class="mr-4" /></a>
-                    <!--Google +-->
-                    <a class="github" href="https://github.com/AidanH56"><img src="images/github-icon.png" class="mr-4" /></a>
+                <div class="footer-socials mb-4">
+                    <!--Email-->
+                    <a class="email" href="mailto:Aidan_Herlong@alumni.baylor.edu"><img src="images/email-icon.png"/></a>
+                    <!--LI-->
+                    <a class="linked-in" href="https://www.linkedin.com/in/aidanherlong/"><img src="images/linkedin-icon.png"/></a>
+                    <!--GH-->
+                    <a class="github" href="https://github.com/AidanH56"><img src="images/github-icon.png"/></a>
                 </div>
             </div>
-            <div class="col-md-3"></div>
+            <div class="col-2 col-md-4"></div>
             <!--Grid column-->
         </div>
         <!--Grid row-->
@@ -228,7 +224,7 @@
     <!--Copyright-->
     <div class="footer-copyright text-center text-white pb-1">
         <div class="container-fluid">
-           <p class="copyright">© 2016 Aidan D. Herlong</p>
+           <p class="copyright">© 2018 Aidan D. Herlong</p>
         </div>
     </div>
     
