CC page fully completed

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
 
 		  	<h1 class="cc-header">ComicCrusade</h1>
-		  	<p class="cc-p lead mt-2">Android OS app dedicated to finding the comics you are looking for in nearby stores.</p>
+		  	<p class="cc-p mt-2">Android OS app dedicated to finding the comics you are looking for in nearby stores.</p>
 		  	<a class="btn btn-outline-dark btn-lg mt-2 cc-btn" href="comiccrusade.html" role="button">SEE CASE STUDY</a>
 
 		  </div>
@@ -97,7 +97,7 @@
 		 
 		  <div class="col-md-5 offset-md-1">
 		  	<h1 class="fs-header">FoodSwitch</h3>
-		  	<p class="fs-p lead mt-2">A web-based app for people who want to live a healthier lifestyle.</p>
+		  	<p class="fs-p mt-2">A web-based app for people who want to live a healthier lifestyle.</p>
 		  	<a class="btn btn-outline-dark btn-lg fs-btn mt-2" href="foodswitch.html" role="button">SEE CASE STUDY</a>
 
 		  </div>
