Changes made to FS and About Me Pages

--- a/foodswitch.html
+++ b/foodswitch.html
@@ -53,16 +53,23 @@
 
 	<!-- Hero -->
 
-	<div class="jumbotron fs-jumbo animated fadeIn">
-		<div class="container-fluid">
-		  <h1 class="display-6 cs-hero-hr1 animated fadeIn">FoodSwitch</h1>
-		  <h4 class="cs-hero-hr2 animated fadeIn">6 weeks | Product Showcase Project</h4>
-		 	 <p class="lead cs-hero-p fs-hero-p animated fadeIn">A web-based app for people who want to live a healthier lifestyle.</p>
-		 	 <p class="lead">
-	   	    	<a class="btn btn-outline-light btn-lg hero-btn mt-4 animated fadeIn" href="" role="button">VIEW PROTOTYPE</a>
-	 	    </p>
+
+		<div class="container-fluid fs-jumbo animated fadeIn">
+			<div class="row">
+				<div class="col-md-5 fs-hero">
+				  <h1 class="display-6 cs-hero-hr1 animated fadeIn">FoodSwitch</h1>
+				  <h4 class="cs-hero-hr2 animated fadeIn">6 weeks | Product Showcase Project</h4>
+				 	 <p class="fs-hero-p animated fadeIn">A web-based app for people who want to live a healthier lifestyle.</p>
+				 	 <p class="lead">
+			   	    	<a class="btn btn-outline-light btn-lg hero-btn mt-4 animated fadeIn" href="" role="button">VIEW PROTOTYPE</a>
+			 	    </p>
+			 	</div>
+			 	<div class="col-md-7">
+			 		<img src="images/fs-hero.png" class="fs-hero-img img-fluid">
+			 	</div>
+			</div>
 		</div>
-	</div>
+
 
 	<!-- Grid System -->
 
@@ -238,7 +245,7 @@
 				
 				<h1 class="test">Eric</h1>
 
-				<p class="persona-bio persona-hr lead">A 37 Year-Old Programmer</p>
+				<p class="persona-bio persona-hr lead">37 Year-Old Programmer</p>
 
 				<h2 class="persona-hr">MOTIVATIONS</h2>
 				<p>Eric has often struggled living healthier due to working long hours. In addition, having an addiction to fast food. Despite this, he wishes to live a healthier lifestyle than the one he currently has. He has made small adjustments to his diet by eating more fruits and going to a fast food restaurant only for lunch instead of both lunch and dinner. Eric loves to track his progress on his health impovements by writing down his caloric intake and what kind of foods he eats but finds the process mundane and tedious. He wishes for a tool that can help him with making the process more enjoyable and rewarding.</p>
@@ -267,7 +274,7 @@
 				
 				<h1 class="test">Matthew</h1>
 
-				<p class="persona-bio persona-hr lead">A 28 Year-Old Freelance Designer</p>
+				<p class="persona-bio persona-hr lead">28 Year-Old Freelance Designer</p>
 
 				<h2 class="persona-hr">MOTIVATIONS</h2>
 				<p>Matthew follows a popular diet known as the Paleo diet-a diet our ancestors, the Neanderthals, followed. While he enjoys his diet, he doesn’t get much exercise. He tries pushing himself to do more but can’t find something that can keep him motivated. He also wishes for an app that can help tracking caloric intake and exercise amount better than his current app. While the one he uses does work, he complains about how missing a day can create data inconsistencies with diet tracking even when he ate normally like any other day. Matthew hopes he can find what he is looking for so he never has to worry about missing a day of logging due to forgetting or something urgent comes up.</p>
