Added text to MY Journey

--- a/aboutme.html
+++ b/aboutme.html
@@ -92,7 +92,7 @@
 				<p class="about-p">In college, I pursued a degree in Management Information Systems (MIS) due to my exposure of technology since the age of seven. My major classes and group projects exposed me to subjects such as UI design; Information Architecture; Graphics Design; and Programming (Visual Basic and C#). These experiences would later play a huge part in my pursuit of becoming a UX Designer.</p>
 
 				
-				<p class="about-p">In the Summer of 2016, I had no job in my major field of study lined up and was confused about what to do next. Reflecting on my accumulated experiences, I decided to pursue a career in UX Design based on my pendulum passions (art and technology) and what I. By December 2016, I applied for taking the designer track at Bloc––an online bootcamp--and got started on my studies.</p>
+				<p class="about-p">In the Summer of 2016, I had no job in my major field of study lined up and was confused about what to do next. Reflecting on my accumulated experiences, I decided to pursue a career in UX Design based on my pendulum passions (art and technology) and what I enjoyed doing in my courses. By December 2016, I applied for taking the designer track at Bloc––an online bootcamp--and got started on my studies. The minute I started doing them, I knew I made the right choice.</p>
 
 				
 				<p class="about-p">My overall journey was like being an adventurer in a fictional tale. I had to overcome many obstacles; mistakes; and errors that made me stronger and better overall both in life and as a designer. The journey is never ending but enjoyable every step of the way.</p>
