Removed Bootstrap and fully applied CSS Grid to About Me page

--- a/test.html
+++ b/test.html
@@ -10,7 +10,7 @@
 
 	<!-- Title -->
 
-	<title>About Me</title>
+	<title>ComicCrusade</title>
 
 	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Raleway:500|Vollkorn:400i" rel="stylesheet">
@@ -33,8 +33,7 @@
 			
 			<a class="logo" href="index.html"><img src="images/logo-img.png" class="portfolio-logo"/></a>
 
-			<a href="index.html"><h1 class="logo-hr">Aidan D. Herlong</h1></a>
-
+			<h1 class="logo-hr">Aidan D. Herlong</h1>
 		</div>
 
 		<nav>
@@ -73,15 +72,12 @@
 
 <!-- Hero -->
 
-	<section class="about-hero">
+	<section class="cs-hero cc-hero">
 
-		<!-- Holds hero content within grid "about-hero"-->
-		<div class="hero-container">
+		<!-- Holds hero content text"-->
+		<div class="cs-hero-container cc-hero-container">
 
-			<h1 class="about-hero-hr">Hello Again!</h1>
-
-			<!-- Avatar image in center of hero-->
-			<img src="images/avatar-img.png" class="avatar-img">
+			<h1 class="cs-hero-hr cc-hero-hr">Hello Again!</h1>
 
 		</div>
 
@@ -159,16 +155,7 @@
 
 	</section>
 
-	<section class="connect">
 
-		<div class="connect-container">
-			
-			<h2>Want to Connect?</h2>
-			<p class="connect-p">Feel free to get in touch with me via <a href="mailto:Aidan_Herlong@alumni.baylor.edu">email</a>, <a href="https://www.linkedin.com/in/aidanherlong/">LinkedIN</a>, or on <a href="https://github.com/AidanH56">GitHub!</a></p>
-
-		</div>
-
-	</section>
 
 <!-- Footer -->
 
