Applied changes to About Me based on DDC feedback

--- a/aboutme.html
+++ b/aboutme.html
@@ -73,29 +73,37 @@
 
 <!-- Hero -->
 
-	<section class="about-hero">
+<!--	<section class="about-hero">
 
-		<!-- Holds hero content within grid "about-hero"-->
+		
 		<div class="hero-container">
 
 			<h1 class="about-hero-hr">Hello Again!</h1>
 
-			<!-- Avatar image in center of hero-->
+		
 			<img src="images/avatar-img.png" class="avatar-img">
 
 		</div>
 
-	</section>
+	</section> -->
 
 <!-- Main Content-->
 
-	<section class="about-content">
+	<section class="main-content">
+
+		<div class="test-img">
+			<img src="images/about-hero-img2.png" class="img-fluid">
+		</div>
 
 		<div class="main">
+
+			<h1>Hello Again!</h1>
+
 			<p>Thank you for taking the time to get to know more about me. Let's get started~</p>
 
 			<p class="about-p">I'm a user experience designer from Houston, TX. I love learning; trying new things; teaching martial arts; and helping myself to a hot cup of mocha. I design landing pages; mobile and web apps; and I can draw awesome girls.</p>
 				
+			
 
 			<img src="images/art-img.png" class="img-fluid art-img-2">
 				<figcaption>"Ultra Instinct Garnet" fan illustration by Me</figcaption>
@@ -163,7 +171,7 @@
 
 		<div class="connect-container">
 			
-			<h2>Want to Connect?</h2>
+			<h2 class="connect-header">Want to Connect?</h2>
 			<p class="connect-p">Feel free to get in touch with me via <a href="mailto:Aidan_Herlong@alumni.baylor.edu">email</a>, <a href="https://www.linkedin.com/in/aidanherlong/">LinkedIN</a>, or on <a href="https://github.com/AidanH56">GitHub!</a></p>
 
 		</div>
