Changes to CC Page

--- a/aboutme.html
+++ b/aboutme.html
@@ -172,7 +172,7 @@
 		<div class="connect-container">
 			
 			<h2 class="connect-header">Want to Connect?</h2>
-			<p class="connect-p">Feel free to get in touch with me via <a href="mailto:Aidan_Herlong@alumni.baylor.edu">email</a>, <a href="https://www.linkedin.com/in/aidanherlong/">LinkedIN</a>, or on <a href="https://github.com/AidanH56">GitHub!</a></p>
+			<p class="connect-p">Feel free to get in touch with me via <a href="mailto:Aidan_Herlong@alumni.baylor.edu">email</a>, <a href="https://www.linkedin.com/in/aidanherlong/">LinkedIn</a>, or on <a href="https://github.com/AidanH56">GitHub!</a></p>
 
 		</div>
 
