More changes to CC Page (User Testing)

--- a/test.html
+++ b/test.html
@@ -411,9 +411,21 @@
 
 			<img src="images/cc-lo-map1.png" class="test-img1 img-fluid">
 
-			<img src="images/cc-lo-map2.png" class="test-img2 img-fluid">
+			<img src="images/cc-map-lo-img.png" class="test-img2 img-fluid">
 
 			<img src="images/cc-lo-map3.png" class="test-img3 img-fluid">
+
+		<div class="challenge">
+			
+			<p>From the research gathered, most of the users found finding a store easy. The only confusing part was what to click on the results screen since all of them said the same thing. As a result, changes were made to ease the use of finding a store. Such changes include reducing the amount of stores shown on screen; giving names to available stores nearby; adding the logo along with a circle icon to show the store selected; and adding more details for the store screens once a store has been selected. </p>
+
+		</div>
+
+			<img src="images/cc-final-map1.png" class="test-img1 img-fluid">
+
+			<img src="images/cc-map-final-img.png" class="test-img2 img-fluid">
+
+			<img src="images/cc-final-store-details.png" class="test-img3 img-fluid">
 
 		<div class="challenge">
 
@@ -423,17 +435,49 @@
 			
 		</div>
 
+			<img src="images/cc-lo-map3.png" class="test-img1 img-fluid">
+
+			<img src="images/cc-lo-inv1.png" class="test-img2 img-fluid">
+
+			<img src="images/cc-lo-inv2.png" class="test-img3 img-fluid">
+
+		<div class="challenge">
+				
+			<p>From testing, 75% of users found it easy to get into the store's inventory using the inventory tab icon on the store's details page. Some said the store details page could use more sprucing up via adding more information about the store (i.e. phone number; address). In addition, adding more information about the selected comic (i.e. author; summary; price). Therefore, such changes were applied to the screens.</p>
+			
+		</div>
+
+			<img src="images/cc-final-store-details.png" class="test-img1 img-fluid">
+
+			<img src="images/cc-inventory-final1-img.png" class="test-img2 img-fluid">
+
+			<img src="images/cc-inventory-final2-img.png" class="test-img3 img-fluid">
+
 		<div class="challenge">
 
 			<h3>Challenge #3 - Order and Search Icons</h3>
 				
 			<p>The app's search and Order icons were tested to see what personal preference users had when it came to utilizing the them.</p>
 
-			<img src="images/cc-map-lo-img.png" class="test-img5 img-fluid">
+		</div>
+
+			<img src="images/cc-lo-map1.png" class="test-img1 img-fluid">
+
+			<img src="images/cc-lo-map2.png" class="test-img2 img-fluid">
+
+			<img src="images/cc-lo-map3.png" class="test-img3 img-fluid">
+
+		<div class="challenge">
 
 			<p>From the testing, here's what was gathered: about 54% of 11 users prefered to have the search icon on the left of the search due to using apps that provided a similar experience. As a result, the icons were switched </p>
 			
 		</div>
+
+			<img src="images/cc-lo-map1.png" class="test-img1 img-fluid">
+
+			<img src="images/cc-lo-map2.png" class="test-img2 img-fluid">
+
+			<img src="images/cc-lo-map3.png" class="test-img3 img-fluid">
 
 	</section>
 
