More changes to user testing for CC

--- a/comiccrusade.html
+++ b/comiccrusade.html
@@ -455,7 +455,45 @@
 
 		<div class="challenge">
 
-			<h3>Challenge #3 - Order and Search Icons</h3>
+			<h3>Challenge #3 - Ordering and Viewing Comics</h3>
+				
+			<p>Users were instructed to try ordering a comic from the store's inventory and viewing it via the menu tab.</p>
+
+		</div>
+
+			<img src="images/cc-lo-inv2.png" class="test-img1 img-fluid">
+
+			<img src="images/cc-lo-order1.png" class="test-img2 img-fluid">
+
+			<img src="images/cc-lo-order2.png" class="test-img3 img-fluid">
+
+			<img src="images/cc-orders-1.png" class="test-img1 img-fluid">
+
+			<img src="images/cc-orders-2.png" class="test-img2 img-fluid">
+
+			<img src="images/cc-orders-3.png" class="test-img3 img-fluid">
+
+		<div class="challenge">
+
+			<p>From the testing, here's what was gathered: only 25% found it difficult to use. This number of users complain that there was confusion regarding how comics would be received in addition to being viewed. How would they be retreived? Is there an easier way to get to the order screen without hassling through other screens first? As a result, the order screens were edited to make it clearer to users how retreiving comics would work. In addition, a list icon was added to make it easier for users to access their orders. </p>
+			
+		</div>
+
+			<img src="images/cc-inventory-final2-img.png" class="test-img1 img-fluid">
+
+			<img src="images/cc-final-order1.png" class="test-img2 img-fluid">
+
+			<img src="images/cc-final-order2.png" class="test-img3 img-fluid">
+
+			<img src="images/cc-orders2.png" class="test-img1 img-fluid">
+
+			<img src="images/cc-orders1.png" class="test-img2 img-fluid">
+
+			<img src="images/cc-orders3.png" class="test-img3 img-fluid">
+
+		<div class="challenge">
+
+			<h3>Challenge #4 - Order and Search Icons</h3>
 				
 			<p>The app's search and Order icons were tested to see what personal preference users had when it came to utilizing the them.</p>
 
