--- a/comiccrusade.html
+++ b/comiccrusade.html
@@ -266,8 +266,9 @@
 		<div class="analysis-intro">
 
 			<h2>Competitive Analysis</h2>
-					
-			<p>My main competition was confirmed by my mass online survey. I discovered from the survey that 88.5% of respondents have used apps that involve comics (both buying and reading online) such as Amazon, DC, and Marvel. 57.7% of respondents found ease of use and reliability to be the best part of their apps of choice while 26.2% complained that navigation problems were the main issue. </p>
+
+			<p>A SWOT Analysis was conducted to better understand <strong> my competition (Amazon, Marvel, and DC) from a big picture perspective </strong>. This helped me gain insight into how ComicCrusade would be positioned next to the identified competitors.
+			</p>
 
 		</div>
 
@@ -315,8 +316,7 @@
 			</div>
 
 			<div class="swot-p">
-				<p>A SWOT Analysis was conducted to better understand my competition from a big picture perspective. This helped me gain insight into how ComicCrusade would be positioned next to the identified competitors.
-				</p>
+				<p>My main competition was confirmed by my mass online survey. I discovered from the survey that <strong>88.5% of respondents have used apps that involve comics (both buying and reading online)</strong> such as Amazon, DC, and Marvel. <strong>57.7%</strong> of respondents <strong>found ease of use and reliability to be the best part of their apps</strong> of choice while <strong>26.2% complained that navigation problems were the main issue.</strong> </p>
 			</div>
 	</section>
 
@@ -471,7 +471,7 @@
 
 		<div class="challenge">
 			
-			<p>From the research gathered, most of the users found finding a store easy. The only confusing part was what to click on the results screen since all of them said the same thing. As a result, changes were made to ease the use of finding a store. Such changes include reducing the amount of stores shown on screen; giving names to available stores nearby; adding the logo along with a circle icon to show the store selected; and adding more details for the store screens once a store has been selected. </p>
+			<p>From the research gathered, <strong>most of the users found finding a store easy. The only confusing part was what to click on the results screen since all of them said the same thing.</strong> As a result, changes were made to ease the use of finding a store. Such changes include reducing the amount of stores shown on screen; giving names to available stores nearby; adding the logo along with a circle icon to show the store selected; and adding more details for the store screens once a store has been selected. </p>
 
 		</div>
 
@@ -497,7 +497,7 @@
 
 		<div class="challenge">
 				
-			<p>From testing, 75% of users found it easy to get into the store's inventory using the inventory tab icon on the store's details page. Some said the store details page could use more sprucing up via adding more information about the store (i.e. phone number; address). In addition, adding more information about the selected comic (i.e. author; summary; price). Therefore, such changes were applied to the screens.</p>
+			<p>From testing, <strong>75% of users found it easy to get into the store's inventory using the inventory tab icon on the store's details page.</strong> Some said the store details page could use more sprucing up via adding more information about the store (i.e. phone number; address). In addition, adding more information about the selected comic (i.e. author; summary; price). Therefore, such changes were applied to the screens.</p>
 			
 		</div>
 
@@ -529,7 +529,7 @@
 
 		<div class="challenge">
 
-			<p>From the testing, here's what was gathered: only 25% found it difficult to use. This number of users complain that there was confusion regarding how comics would be received in addition to being viewed. How would they be retreived? Is there an easier way to get to the order screen without hassling through other screens first? As a result, the order screens were edited to make it clearer to users how retreiving comics would work. In addition, a list icon was added to make it easier for users to access their orders. </p>
+			<p>From the testing, here's what was gathered: <strong>only 25% found it difficult to use. This number of users complain that there was confusion regarding how comics would be received in addition to being viewed.</strong> How would they be retreived? Is there an easier way to get to the order screen without hassling through other screens first? As a result, the order screens were edited to make it clearer to users how retreiving comics would work. In addition, a list icon was added to make it easier for users to access their orders. </p>
 			
 		</div>
 
@@ -561,7 +561,7 @@
 
 		<div class="challenge">
 
-			<p>From the testing, here's what was gathered: about 54% of 11 users prefered to have the search icon on the left of the search due to using apps that provided a similar experience. As a result, the icons were switched </p>
+			<p>From the testing, here's what was gathered: <strong>about 54% of 11 users prefered to have the search icon on the left of the search due to using apps that provided a similar experience.</strong> As a result, the icons were switched. </p>
 			
 		</div>
 
