More changes to CC Page User Testing

--- a/comiccrusade.html
+++ b/comiccrusade.html
@@ -463,11 +463,30 @@
 			
 		</div>
 
-			<img src="images/cc-lo-map1.png" class="test-img1 img-fluid">
+		<div class="test-img1">
 
-			<img src="images/cc-map-lo-img.png" class="test-img2 img-fluid">
+			<h3>Lo-Fi Store Locator</h3>
 
-			<img src="images/cc-lo-map3.png" class="test-img3 img-fluid">
+			<img src="images/cc-lo-map1.png" class="img-fluid">
+
+		</div>
+
+		<div class="test-img2">
+
+			<h3>Lo-Fi Store Results</h3>
+
+			<img src="images/cc-map-lo-img.png" class="img-fluid">
+
+		</div>
+
+		<div class="test-img3">
+
+			<h3>Lo-Fi Store Details</h3>
+
+			<img src="images/cc-lo-map3.png" class="img-fluid">
+
+		</div>
+
 
 		<div class="challenge">
 			
@@ -475,11 +494,29 @@
 
 		</div>
 
-			<img src="images/cc-final-map1.png" class="test-img1 img-fluid">
+		<div class="test-img1">
 
-			<img src="images/cc-map-final-img.png" class="test-img2 img-fluid">
+			<h3>Final Store Locator</h3>
 
-			<img src="images/cc-final-store-details.png" class="test-img3 img-fluid">
+			<img src="images/cc-final-map1.png" class="img-fluid">
+
+		</div>
+
+		<div class="test-img2">
+
+			<h3>Final Store Results</h3>
+
+			<img src="images/cc-map-final-img.png" class="img-fluid">
+
+		</div>
+
+		<div class="test-img3">
+
+			<h3>Final Store Details</h3>
+
+			<img src="images/cc-final-store-details.png" class="img-fluid">
+
+		</div>
 
 		<div class="challenge">
 
@@ -489,11 +526,29 @@
 			
 		</div>
 
-			<img src="images/cc-lo-map3.png" class="test-img1 img-fluid">
+		<div class="test-img1">
 
-			<img src="images/cc-lo-inv1.png" class="test-img2 img-fluid">
+			<h3>Lo-Fi Store Details</h3>
 
-			<img src="images/cc-lo-inv2.png" class="test-img3 img-fluid">
+			<img src="images/cc-lo-map3.png" class="img-fluid">
+
+		</div>
+
+		<div class="test-img2">
+
+			<h3>Lo-Fi Store Inventory</h3>
+
+			<img src="images/cc-lo-inv1.png" class="img-fluid">
+
+		</div>
+
+		<div class="test-img3">
+
+			<h3>Lo-Fi Comic Details</h3>
+
+			<img src="images/cc-lo-inv2.png" class="img-fluid">
+
+		</div>
 
 		<div class="challenge">
 				
@@ -501,11 +556,29 @@
 			
 		</div>
 
-			<img src="images/cc-final-store-details.png" class="test-img1 img-fluid">
+		<div class="test-img1">
 
-			<img src="images/cc-inventory-final1-img.png" class="test-img2 img-fluid">
+			<h3>Final Store Details</h3>
 
-			<img src="images/cc-inventory-final2-img.png" class="test-img3 img-fluid">
+			<img src="images/cc-final-store-details.png" class="img-fluid">
+
+		</div>
+
+		<div class="test-img2">
+
+			<h3>Final Store Inventory</h3>
+
+			<img src="images/cc-inventory-final1-img.png" class="img-fluid">
+
+		</div>
+
+		<div class="test-img3">
+
+			<h3>Final Comic Details</h3>
+
+			<img src="images/cc-inventory-final2-img.png" class="img-fluid">
+
+		</div>
 
 		<div class="challenge">
 
@@ -515,17 +588,54 @@
 
 		</div>
 
-			<img src="images/cc-lo-inv2.png" class="test-img1 img-fluid">
+		<div class="test-img1">
 
-			<img src="images/cc-lo-order1.png" class="test-img2 img-fluid">
+			<h3>Lo-Fi Comic Details</h3>
 
-			<img src="images/cc-lo-order2.png" class="test-img3 img-fluid">
+			<img src="images/cc-lo-inv2.png" class="img-fluid">
 
-			<img src="images/cc-orders-1.png" class="test-img1 img-fluid">
+		</div>
 
-			<img src="images/cc-orders-2.png" class="test-img2 img-fluid">
+		<div class="test-img2">
 
-			<img src="images/cc-orders-3.png" class="test-img3 img-fluid">
+			<h3>Lo-Fi Order</h3>
+
+			<img src="images/cc-lo-order1.png" class="img-fluid">
+
+		</div>
+
+		<div class="test-img3">
+
+			<h3>Lo-Fi Order Complete</h3>
+
+			<img src="images/cc-lo-order2.png" class="img-fluid">
+
+		</div>
+
+		<div class="test-img1">
+
+			<h3>Lo-Fi Recent Orders</h3>
+
+			<img src="images/cc-orders-1.png" class="img-fluid">
+
+		</div>
+
+		<div class="test-img2">
+
+			<h3>Lo-Fi Older Orders</h3>
+
+			<img src="images/cc-orders-2.png" class="img-fluid">
+
+		</div>
+
+		<div class="test-img3">
+
+			<h3>Lo-Fi Order Details</h3>
+
+			<img src="images/cc-orders-3.png" class="img-fluid">
+
+		</div>
+
 
 		<div class="challenge">
 
@@ -533,17 +643,53 @@
 			
 		</div>
 
-			<img src="images/cc-inventory-final2-img.png" class="test-img1 img-fluid">
+		<div class="test-img1">
 
-			<img src="images/cc-final-order1.png" class="test-img2 img-fluid">
+			<h3>Final Comic Details</h3>
 
-			<img src="images/cc-final-order2.png" class="test-img3 img-fluid">
+			<img src="images/cc-inventory-final2-img.png" class="img-fluid">
 
-			<img src="images/cc-orders2.png" class="test-img1 img-fluid">
+		</div>
 
-			<img src="images/cc-orders1.png" class="test-img2 img-fluid">
+		<div class="test-img2">
 
-			<img src="images/cc-orders3.png" class="test-img3 img-fluid">
+			<h3>Final Order Screen</h3>
+
+			<img src="images/cc-final-order1.png" class="img-fluid">
+
+		</div>
+
+		<div class="test-img3">
+
+			<h3>Final Order Confirmation</h3>
+
+			<img src="images/cc-final-order2.png" class="img-fluid">
+
+		</div>
+
+		<div class="test-img1">
+
+			<h3>Final Recent Orders</h3>
+
+			<img src="images/cc-orders2.png" class="img-fluid">
+
+		</div>
+
+		<div class="test-img2">
+
+			<h3>Final Older Orders</h3>
+
+			<img src="images/cc-orders1.png" class="img-fluid">
+
+		</div>
+
+		<div class="test-img3">
+
+			<h3>Final Order Details</h3>
+
+			<img src="images/cc-orders3.png" class="img-fluid">
+
+		</div>
 
 		<div class="challenge">
 
@@ -553,11 +699,29 @@
 
 		</div>
 
-			<img src="images/cc-lo-map1.png" class="test-img1 img-fluid">
+		<div class="test-img1">
 
-			<img src="images/cc-lo-map2.png" class="test-img2 img-fluid">
+			<h3>Lo-Fi</h3>
 
-			<img src="images/cc-lo-map3.png" class="test-img3 img-fluid">
+			<img src="images/cc-lo-map1.png" class="img-fluid">
+
+		</div>
+
+		<div class="test-img2">
+
+			<h3>Lo-Fi</h3>
+
+			<img src="images/cc-lo-map2.png" class="img-fluid">
+
+		</div>
+
+		<div class="test-img3">
+
+			<h3>Lo-Fi</h3>
+
+			<img src="images/cc-lo-map3.png" class="img-fluid">
+
+		</div>
 
 		<div class="challenge">
 
