Made responsive changes to all pages

--- a/aboutme.html
+++ b/aboutme.html
@@ -180,7 +180,7 @@
 
 <!-- Footer -->
 
-	<footer class="my-footer">
+	<footer id="contact-footer" class="my-footer">
 		
 		<p class="copyright">Copyright © 2018 Aidan D. Herlong</p>
 
