Added mobile avatar (WIP)

--- a/index.html
+++ b/index.html
@@ -74,8 +74,11 @@
 
 	<section id="hero" class="main-hero main-grid">
 
+
 		<!-- Holds hero content text"-->
 		<div class="cs-hero-container">
+
+			<img src="images/avatar-img.png" class="mobile-avatar animated fadeIn">
 
 			<h1 class="animated fadeIn">Hi, I'm Aidan Herlong!</h1>
 
