CC Major Changes 8.1.2018

--- a/foodswitch.html
+++ b/foodswitch.html
@@ -146,7 +146,7 @@
 					
 			<img src="images/fs-smapho-img.png" class="cc-research-img research-img">
 					
-			<p class="cc-ur-p"><strong>71%</strong> of respondents have used a diet tracking app before (i.e. myfitnesspal; Fooducate; MyPlate).</p>
+			<p class="cc-ur-p"><strong>71%</strong> of respondents have used a diet tracking app before (i.e. MyFitnessPal; Fooducate; MyPlate).</p>
 
 		</div>
 			
